Fix spacing in History

--- a/src/css/History.css
+++ b/src/css/History.css
@@ -10,5 +10,5 @@
  }
 
  .History  h2 + div {
-	margin-bottom: 2rem;
+	margin: 1rem 0 2rem 0;
  }
